# ahuri-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-windows.txt  requirements.txt
ahuri/: __init__.py  __main__.py  config.py  start.py  utils.py
