[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ahuri-cli"
version = "1.1.2"
authors = [
    { name="sqdnoises" }
]
description = "Use Ahuri from the command line!"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "maskpass",
    "requests",
    "websockets",
    "yarl"
]

[project.urls]
Homepage = "https://github.com/ahuri-app/ahuri-cli"

[project.scripts]
ahuri = "ahuri.start:main"

[project.optional-dependencies]
windows = [
    "pyreadline3"
]

dev = [
    "setuptools", "bumpver"
]

[tool.bumpver]
current_version = "1.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"README.md" = ["{version}"]
"src/ahuri/__init__.py" = ['__version__ = "{version}"']